--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@discordjs/rest": "^1.5.0",
+    "@discordjs/voice": "^0.14.0",
     "discord.js": "^14.7.1"
   },
   "name": "sayabot",
