--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@discordjs/builders": "^1.4.0",
     "@discordjs/rest": "^1.5.0",
     "@discordjs/voice": "^0.14.0",
     "discord.js": "^14.7.1"
